# Qwen_prompter_for_Flux_demo

./: .gitignore  Qwen_prompter_for_Flux_demo  README.md  pyproject.toml  requirements.txt
generation_qwen_flux/prompter/: builder.py  parser.py  qwen_prompter.py
notebooks/: Flux_Qwen_colab.ipynb  Flux_Qwen_tests.ipynb  Flux_Qwen_tests_.ipynb  Qwen_tests.ipynb
ranger_generation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ranger_generation/generator/: flux_runner.py
ranger_generation/prompter/: builder.py  parser.py  qwen_prompter.py
rules/: README.md  common.yaml
rules/lighting/golden_hour/: golden_hour.yaml
rules/objects/sbercat/: sbercat.yaml
rules/style/cinematic_photo/: cinematic_photo.yaml
rules/viewpoint/front_view/: front_view.yaml
scripts/: batch_generate.py  demo_flux.py  demo_prompt.py  demo_qwen_flux.py  validate_rules.py
